--- a/res/layout/current_frag.xml
+++ b/res/layout/current_frag.xml
@@ -8,24 +8,25 @@
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Take Photo"
+            android:text="@string/take"
             android:id="@+id/button" android:layout_gravity="center_horizontal"
-            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
+            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
+            android:layout_marginLeft="195dp" android:layout_alignParentLeft="true"/>
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Rec"
-            android:id="@+id/bRec" android:layout_alignParentTop="true" android:layout_toLeftOf="@+id/button"
-            android:layout_alignParentLeft="true"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Note"
-            android:id="@+id/bNote" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/button"
-            android:layout_alignParentRight="true"/>
+            android:text="@string/start"
+            android:id="@+id/bRec" android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="195dp" android:layout_alignParentRight="true"/>
 
 
-
+    <fragment
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/button"
+            android:name="com.google.android.gms.maps.MapFragment"/>
 
 </RelativeLayout>
