--- a/res/layout/history_fragment.xml
+++ b/res/layout/history_fragment.xml
@@ -5,9 +5,17 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <fragment
+            android:id="@+id/mapHist"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:name="com.google.android.gms.maps.MapFragment"/>
+
+
 
     <android.support.v4.view.ViewPager
             android:id="@+id/galleryPager"
+            android:layout_below="@id/mapHist"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
