--- a/res/layout/playback_fragment.xml
+++ b/res/layout/playback_fragment.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" android:background="#ffe5ffe9">
+              android:layout_height="match_parent" android:background="#ffff0006">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/textView" android:layout_gravity="right"/>
-</LinearLayout>
+            android:text="N/A"
+            android:id="@+id/textView" android:layout_gravity="center_horizontal" android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" android:textSize="70dp"/>
+</RelativeLayout>
